@@ -1,0 +1,22 @@
+# This is a GNOME/KDE desktop integration file for the Tkchat application.
+# To install this properly system-wide it should be copied to
+#    /usr/share/applications/
+# and the tkchat48.png icon file should be copied to
+#    /usr/share/icons/hicolor/
+#
+# To install this for a single user copy the .desktop file to
+#   ~/.gnome2/vfolders/applications/
+# and the icon file to
+#   ~/.icons/gnome/48/apps/
+#
+[Desktop Entry]
+Encoding=UTF-8
+Name=Tkchat
+Comment=Tcl/Tk XMPP Chat client
+Comment[de]=Tcl/Tk XMPP tach
+Comment[fr]=Tcl/Tk XMPP parle
+Exec=tkchat
+Icon=tkchat48.png
+Terminal=false
+Type=Application
+Categories=Application;Network;
